--- a/Services.html
+++ b/Services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Maynilad Water Services - Billing Portal</title>
+  <title>Services - Maynilad Water Services, Inc.</title>
   <link href="https://fonts.googleapis.com/css2?family=Lusitana&display=swap" rel="stylesheet">
   
   <style>
