--- a/about.html
+++ b/about.html
@@ -259,7 +259,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo.png" alt="Maynilad Logo" height="100" />
+          <img src=url("./assets/logo.png") alt="Maynilad Logo" height="100" />
         </a>
 
         <button
@@ -462,7 +462,7 @@
     <footer>
       <div class="footer-content-wrapper">
         <div class="footer-logo">
-          <img src="assets/logo.png" alt="Company Logo" />
+          <img src=url("./assets/logo.png") alt="Company Logo" />
         </div>
 
         <div class="footer-nav">
@@ -492,19 +492,19 @@
           </div>
           <div class="social-icons footer-bottom-social">
             <img
-              src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SF.png"
+              src=url("./assets/SF.png")
               alt="Facebook"
             />
             <img
-              src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SX.png"
+              src=url("./assets/SX.png")
               alt="Twitter"
             />
             <img
-              src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SY.png"
+              src=url("./assets/SY.png")
               alt="Youtube"
             />
             <img
-              src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SI.png"
+              src=url("./assets/SI.png")
               alt="LinkedIn"
             />
           </div>
