--- a/home.html
+++ b/home.html
@@ -1601,7 +1601,7 @@ footer::before {
   <!-- NAV BAR-->
   <body>
     <header>
-  <img class="logo" src="Images/Maynilad New logo.png" alt="logo">
+  <img class="logo" src=url("./assets/logo.png") alt="logo">
   <nav>
     <ul class="nav__links">
       <li><a href="#">Home</a></li>
@@ -1725,17 +1725,17 @@ footer::before {
 
   <div class="exploreboxes">
     <div class="exploreboxsItem">
-      <img src="Images/home_calculator.png" alt="Bill Calculator">
+      <img src=url("./assets/home_calculator.png") alt="Bill Calculator">
       <h4>Bill Calculator</h4>
       <p>Estimate your monthly water consumption</p>
     </div>
     <div class="exploreboxsItem">
-      <img src="Images/home_information.png" alt="Bill Information">
+      <img src=url("./assets/home_information.png") alt="Bill Information">
       <h5>My Water Bill Information</h5>
       <p>Learn more about your billing statement</p>
     </div>
     <div class="exploreboxsItem">
-      <img src="Images/hone_portal.png" alt="My Water Bill Portal">
+      <img src=url("./assets/home_portal.png") alt="My Water Bill Portal">
       <h6>My Water Bill Portal</h6>
       <p>Log-in to view or download your water bills, or pay online.</p>
     </div>
@@ -1750,10 +1750,10 @@ footer::before {
     <!-- Review Box 1 -->
     <div class="reviewBoxes">
       <div class="icon-circle">
-        <img src="Images/home_review_1.png" alt="reviewer1">
+        <img src=url("./assets/home_review_1.png") alt="reviewer1">
       </div>
       <div class="star-rating">
-        <img src="Images/new 5 stars.png" alt="5 star rating"> 
+        <img src=url("./assets/new 5 stars.png") alt="5 star rating"> 
       </div>
       <p>Elevators, conference rooms, etc. are on the second floor. The lobby (with a receptionist inside) opens up to showcase Maynilad's accomplishments over the past few years.</p>
     </div>
@@ -1761,10 +1761,10 @@ footer::before {
     <!-- Review Box 2 -->
     <div class="reviewBoxes">
       <div class="icon-circle">
-        <img src="Images/home_review_2.png" alt="reviewer2">
+        <img src=url("./assets/home_review_2.png") alt="reviewer2">
       </div>
       <div class="star-rating">
-        <img src="Images/4 stars rating.png" alt="4 star rating">
+        <img src=url("./assets/4 stars rating.png") alt="4 star rating">
       </div>
       <p>A place of work for lots of Filipinos serving for water utilities services in NCR. Also a habitat for lots of trees and migrating birds. Bignai tree was spotted while going to Maynilad Balara Office.</p>
     </div>
@@ -1772,10 +1772,10 @@ footer::before {
     <!-- Review Box 3 -->
     <div class="reviewBoxes">
       <div class="icon-circle">
-        <img src="Images/home_review_3.png" alt="reviewer3">
+        <img src=url("./assets/home_review_3.png") alt="reviewer3">
       </div>
       <div class="star-rating">
-        <img src="Images/3 star rating.png" alt="3 star rating">
+        <img src=url("./assets/3 star rating.png") alt="3 star rating">
       </div>
       <p>Maynilad has truly transformed the way our community experiences water services. From consistent supply to clear, safe drinking water straight from the tap the difference is undeniable. </p>
     </div>
@@ -1807,7 +1807,7 @@ footer::before {
  <footer>
       <div class="footer-content-wrapper">
         <div class="footer-logo">
-          <img src="Images/Maynilad New logo.png" alt="Company Logo" />
+          <img src=url("./assets/logo.png") alt="Company Logo" />
         </div>
 
         <div class="footer-nav">
@@ -1841,19 +1841,19 @@ footer::before {
 
           <div class="social-icons footer-bottom-social">
             <img
-              src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SF.png"
+              src=url("./assets/SF.png")
               alt="Facebook"
             />
             <img
-              src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SX.png"
+              src=url("./assets/SX.png")
               alt="Twitter"
             />
             <img
-              src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SY.png"
+              src=url("./assets/SY.png")
               alt="Youtube"
             />
             <img
-              src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SI.png"
+              src=url("./assets/SI.png")
               alt="LinkedIn"
             />
           </div>
