--- a/services.html
+++ b/services.html
@@ -351,7 +351,7 @@
   <!-- Header -->
   <div class="header">
     <div class="logo">
-      <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/logo.png" alt="Company Logo" />
+      <img src=url("./assets/logo.png") alt="Company Logo" />
     </div>
 
     <div class="nav-buttons" id="navButtons">
@@ -372,7 +372,7 @@
 
   <!-- Wide Image Section -->
 	<div class="wide-img-section">
-	  <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/Services.png" alt="Highlight Image" class="blurred-img" />
+	  <img src=url("./assets/Services.png") alt="Highlight Image" class="blurred-img" />
 	  <div class="dark-overlay"></div>
 	  <div class="wide-img-text">
 		<h2 class="wide-title">Portfolio of Services</h2>
@@ -389,7 +389,7 @@
   <div class="grid-wrapper">
     <div class="grid-box">
       <div class="grid-top">
-        <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/S1.png" class="box-img" alt="S1" />
+        <img src=url("./assets/S1.png") class="box-img" alt="S1" />
       </div>
       <div class="grid-bottom">
         <div class="grid-text">
@@ -401,7 +401,7 @@
 
     <div class="grid-box">
       <div class="grid-top">
-        <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/S2.png" class="box-img" alt="S2" />
+        <img src=url("./assets/S2.png") class="box-img" alt="S2" />
       </div>
       <div class="grid-bottom">
         <div class="grid-text">
@@ -413,7 +413,7 @@
 
     <div class="grid-box">
       <div class="grid-top">
-        <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/S3.png" class="box-img" alt="S3" />
+        <img src=url("./assets/S3.png") class="box-img" alt="S3" />
       </div>
       <div class="grid-bottom">
         <div class="grid-text">
@@ -425,7 +425,7 @@
 
     <div class="grid-box">
       <div class="grid-top">
-        <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/S4.png" class="box-img" alt="S4" />
+        <img src=url("./assets/S4.png") class="box-img" alt="S4" />
       </div>
       <div class="grid-bottom">
         <div class="grid-text">
@@ -437,7 +437,7 @@
 
     <div class="grid-box">
       <div class="grid-top">
-        <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/S5.png" class="box-img" alt="S5" />
+        <img src=url("./assets/S5.png") class="box-img" alt="S5" />
       </div>
       <div class="grid-bottom">
         <div class="grid-text">
@@ -449,7 +449,7 @@
 
     <div class="grid-box">
       <div class="grid-top">
-        <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/S6.png" class="box-img" alt="S6" />
+        <img src=url("./assets/S6.png") class="box-img" alt="S6" />
       </div>
       <div class="grid-bottom">
         <div class="grid-text">
@@ -461,7 +461,7 @@
 
     <div class="grid-box">
       <div class="grid-top">
-        <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/S7.png" class="box-img" alt="S7" />
+        <img src=url("./assets/S7.png") class="box-img" alt="S7" />
       </div>
       <div class="grid-bottom">
         <div class="grid-text">
@@ -473,7 +473,7 @@
 
     <div class="grid-box">
       <div class="grid-top">
-        <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/S8.png" class="box-img" alt="S8" />
+        <img src=url("./assets/S8.png") class="box-img" alt="S8" />
       </div>
       <div class="grid-bottom">
         <div class="grid-text">
@@ -485,7 +485,7 @@
 
     <div class="grid-box">
       <div class="grid-top">
-        <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/S9.png" class="box-img" alt="S9" />
+        <img src=url("./assets/S9.png") class="box-img" alt="S9" />
       </div>
       <div class="grid-bottom">
         <div class="grid-text">
@@ -499,7 +499,7 @@
   <!-- Footer -->
   <footer>
 	<div class="footer-logo">
-		<img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/logo.png" alt="Company Logo" />
+		<img src=url("./assets/logo.png") alt="Company Logo" />
 	  </div>
 
 	  <div class="footer-nav">
@@ -523,10 +523,10 @@
 		  <button class="footer-btn">Address: 123 Waterway, Metro Manila</button>
 		</div>
 		<div class="social-icons">
-		  <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SF.png" alt="Facebook" />
-		  <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SX.png" alt="Twitter" />
-		  <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SY.png" alt="Youtube" />
-		  <img src="https://raw.githubusercontent.com/DLADDICT/Maynilad/main/SI.png" alt="Instagram" />
+		  <img src=url("./assets/SF.png") alt="Facebook" />
+		  <img src=url("./assets/SX.png") alt="Twitter" />
+		  <img src=url("./assets/SY.png") alt="Youtube" />
+		  <img src=url("./assets/SI.png") alt="Instagram" />
 		</div>
 	  </div>
   </footer>
