--- a/about.html
+++ b/about.html
@@ -251,7 +251,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src=url("./assets/logo.png") alt="Maynilad Logo" height="100" />
+          <img src="assets/logo.png" alt="Maynilad Logo" height="100" />
         </a>
 
         <button
@@ -266,13 +266,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link fw-semibold px-3" href="#">Home</a>
+              <a class="nav-link fw-semibold px-3" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-semibold px-3" href="#">About</a>
+              <a class="nav-link fw-semibold px-3" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-semibold px-3" href="#">Services</a>
+              <a class="nav-link fw-semibold px-3" href="services.html"
+                >Services</a
+              >
             </li>
           </ul>
           <a class="btn btn-custom px-4 py-1" href="#">My Water Bill</a>
