--- a/about.html
+++ b/about.html
@@ -277,7 +277,7 @@
               >
             </li>
           </ul>
-          <a class="btn btn-custom px-4 py-1" href="#">My Water Bill</a>
+          <a class="btn btn-custom px-4 py-1">My Water Bill</a>
         </div>
       </div>
     </nav>
