--- a/index.html
+++ b/index.html
@@ -1046,6 +1046,7 @@
       }
 
       @media (min-width: 1200px) {
+      @media (min-width: 1440px) {
         .heroflex {
           width: 85%;
         }
