--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         cursor: pointer;
       }
 
-      /* Mobile menu styles */
+  
       .mobile-menu {
         display: none;
         background-color: #f8f9fa;
@@ -129,54 +129,77 @@
       .navbar .container {
         padding-left: 0 ;
         padding-right: 0 ;
-        min-height: 56px ;
-        height: 56px ;
+        min-height: 70px ;
+        height: 70px ;
         display: flex ;
         flex-direction: row ;
         align-items: center;
         justify-content: space-between ;
       }
       .navbar {
-        min-height: 56px ;
-        height: 56px ;
-        padding-top: 0 ;
-        padding-bottom: 0 ;
-      }
-      .navbar-brand {
-        margin: 0 ;
-        padding: 0 ;
-        display: flex;
-        align-items: center;
-      }
-      .navbar-brand img {
-        height: 80px ;
-        width: auto ;
-      }
+          background: #fff;
+          box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+          min-height: 70px;
+          height: 70px;
+          padding-top: 0;
+          padding-bottom: 0;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        }
+            .navbar-brand {
+          margin: 0;
+          padding: 0;
+          display: flex;
+          align-items: center;
+        }
+            .navbar-brand img {
+          height: 90px;
+          width: auto;
+          display: block;
+        }
+
       .navbar-nav .nav-link {
-        padding-top: 6px ;
-        padding-bottom: 6px ;
-        font-size: 18px ;
+        color: black;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-size: 18px;
         border-radius: 20px;
         transition: all 0.3s ease;
         margin: 0 10px;
+        font-weight: 500;
+        background: transparent;
       }
-      .navbar-nav .nav-link:hover {
+      .navbar-nav .nav-link:hover,
+      .navbar-nav .nav-link.active {
         background-color: #0c4c83;
         color: #fff !important;
         box-shadow: 0 4px 8px rgba(0,0,0,0.15);
         transform: translateY(-2px);
       }
-      .btn-custom {
-        padding-top: 6px ;
-        padding-bottom: 6px ;
-        font-size: 16px ;
+
+     .btn-custom {
+      padding: 6px 20px;
+      font-size: 16px;
+      border-radius: 20px;
+      background: #0c4c83;
+      color: #fff;
+      border: none;
+      transition: background 0.2s;
+      }
+      .btn-custom:hover {
+       background: #08335a;
+      color: #fff;
       }
       .navbar-toggler {
-        padding: 4px 8px ;
-        font-size: 22px ;
-        min-height: 40px ;
+       padding: 4px 8px;
+       font-size: 22px;
+       min-height: 40px;
+       border-radius: 8px;
+       border: 1px solid #0c4c83;
+       color: #0c4c83;
+      background: #fff;
       }
-
       .heroflex {
         position: relative;
         background-color: transparent;
@@ -898,11 +921,13 @@
       .btn-custom:hover {
         background-color: #093b66;
       }
+
       footer {
         background-color: white;
-        padding: 30px 0;
+        padding: 20px 0;
         font-size: 20px;
         color: #333;
+        font-family: "Lusitana", serif;
       }
 
       .footer-content-wrapper {
@@ -913,7 +938,9 @@
 
       .footer-logo {
         text-align: center;
+        margin-bottom: 10px;
       }
+
       .footer-logo img {
         height: 80px;
         margin-bottom: 20px;
@@ -929,17 +956,20 @@
       }
 
       .footer-nav button {
-        background: none;
+        background: transparent;
         border: none;
         font-size: 18px;
         color: black;
         padding: 0;
         font-family: "Lusitana", serif;
         cursor: pointer;
+        text-decoration: none;
       }
 
       .footer-nav button:hover {
         text-decoration: underline;
+        background: transparent;
+        color: black;
       }
 
       .divider {
@@ -950,23 +980,34 @@
 
       .footer-bottom {
         display: flex;
-        width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 40px;
+        margin-top: 20px;
       }
+
+      .footer-bottom .hotline p {
+        font-size: 20px ;
+        color: black;
+        margin: 0;
+      }
+
       .footer-bottom > * {
-        width: 25%;
+        flex: 1;
+        min-width: 220px;
         display: flex;
-        align-items: flex-start;
-        justify-items: center;
+        flex-direction: column;
+        align-items: center;
         text-align: center;
+        margin-bottom: 20px;
       }
 
       .footer-btn {
-        width: 100%;
         background: none;
         border: none;
-        color: #555;
+        color: black;
         font-family: "Lusitana", serif;
-        font-size: 14px;
+        font-size: 20px;
         line-height: 1.4;
         padding-inline: 24px;
         cursor: default;
@@ -975,8 +1016,9 @@
 
       .social-icons {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         gap: 20px;
+        margin-top: 10px;
       }
 
       .social-icons img {
@@ -985,8 +1027,21 @@
         border-radius: 50%;
         object-fit: cover;
       }
+
       .text-md-dark {
-        color: #212529 !important;
+        color: #212529;
+      }
+
+
+      footer h5 {
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+
+      footer small {
+        font-size: 20px;
+        color: #212529;
       }
       
       .star-rating {
@@ -1613,6 +1668,7 @@
           cursor: pointer;
           z-index: 1100;
           color: #0c4c83;
+          margin-right: 15px;
         }
         .mobile-menu {
           display: none;
@@ -1623,58 +1679,58 @@
           left: 0;
           z-index: 1000;
           box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+          text-align: left; /* Align menu items to left */
+          padding-left: 20px; /* Add some left padding */
         }
         .mobile-menu.show {
           display: block;
         }
         .mobile-menu ul {
-          list-style: none;
-          padding: 0;
-          margin: 0;
+          padding: 10px 0; 
+          border-bottom: 1px solid #ddd;
+          width: 95%; 
         }
         .mobile-menu li {
           padding: 15px 20px;
           border-bottom: 1px solid #ddd;
         }
         .mobile-menu a {
-          text-decoration: none;
-          color: #333;
-          font-family: "Lusitana", sans-serif;
-          font-size: 18px;
-          display: block;
-          background: none;
-          border: none;
-          text-align: left;
-          width: 100%;
-          padding: 0;
-          transition: all 0.3s ease;
+         text-decoration: none;
+        color: black; 
+        font-family: "Lusitana", sans-serif;
+        font-size: 18px;
+        display: block;
+        background: none;
+        border: none;
+        text-align: left;
+        width: 100%;
+        padding: 10px 15px; 
+        transition: all 0.3s ease;
+        border-radius: 50px; 
         }
         .mobile-menu .navbarBill {
-          display: block;
-          padding: 12px 24px;
-          margin: 15px 20px;
-          border-radius: 50px;
-          color: black;
-          font-family: "Lusitana", sans-serif;
-          font-size: 18px;
-          font-weight: 700;
-          background-color: transparent;
-          border: none;
-          text-align: center;
-          width: calc(100% - 40px);
-          transition: all 0.3s ease;
-          cursor: pointer;
+           display: block;
+            padding: 12px 24px;
+            margin: 15px 0; 
+            border-radius: 50px;
+            color: black; 
+            font-family: "Lusitana", sans-serif;
+            font-size: 18px;
+            font-weight: 700;
+            background-color: transparent;
+            border: none;
+            text-align: left;
+            width: 95%; 
+            transition: all 0.3s ease;
+            cursor: pointer;
         }
-        .mobile-menu a:hover {
-          color: #0c4c83;
-          background-color: rgba(12, 76, 131, 0.1);
-        }
-        .mobile-menu .navbarBill:hover {
-          background-color: #0c4c83;
-          color: white;
-          transform: translateY(-2px);
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
+      mobile-menu a:hover,
+      .mobile-menu .navbarBill:hover {
+        background-color: #0c4c83; 
+        color: white;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      }
         #advisorySecBoxItem2 p {
           font-size: 15px;
         }
@@ -1688,7 +1744,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
       <div class="container d-flex justify-content-between align-items-center">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo.png" alt="Maynilad Logo" height="100" />
+          <img src="assets/logo.png" alt="Maynilad Logo"/>
         </a>
 
         <button
@@ -1962,82 +2018,60 @@
     </div>
 
     <!-- FOOTER -->
-    <footer>
-      <div class="footer-content-wrapper">
-        <div class="footer-logo">
-          <img src="assets/logo.png" alt="Company Logo" />
-        </div>
+<footer>
+  <div class="footer-content-wrapper">
+    <!-- Logo -->
+    <div class="footer-logo">
+      <img src="assets/logo.png" alt="Company Logo" />
+    </div>
 
-        <div class="footer-nav">
-          <button>About Us</button>
-          <button>Our Services</button>
-          <button>Support Center</button>
-          <button>Privacy Policy</button>
-          <button>Terms of Use</button>
-        </div>
+    <!-- Navigation -->
+    <div class="footer-nav">
+      <button>About Us</button>
+      <button>Our Services</button>
+      <button>Support Center</button>
+      <button>Privacy Policy</button>
+      <button>Terms of Use</button>
+    </div>
 
-        <div class="container border-top pt-4">
-          <div class="row text-center">
-            <div class="col-md-4 mb-4">
-              <h5 class="fw-bold text-white text-md-dark">Socials</h5>
-              <div class="d-flex justify-content-center gap-3 mt-2">
-                <a href="#"
-                  ><img
-                    src="assets/SF.png"
-                    alt="Facebook"
-                    width="24"
-                    height="24"
-                /></a>
-                <a href="#"
-                  ><img
-                    src="assets/SX.png"
-                    alt="Twitter"
-                    width="24"
-                    height="24"
-                /></a>
-                <a href="#"
-                  ><img
-                    src="assets/SY.png"
-                    alt="YouTube"
-                    width="24"
-                    height="24"
-                /></a>
-                <a href="#"
-                  ><img
-                    src="assets/SI.png"
-                    alt="LinkedIn"
-                    width="24"
-                    height="24"
-                /></a>
-              </div>
-            </div>
+    <!-- Divider -->
+    <div class="divider"></div>
 
-            <div class="col-md-4 mb-4">
-              <h5 class="fw-bold text-md-dark">Address</h5>
-              <address class="mt-2 mb-0 text-md-dark">
-                <p class="mb-1">
-                  Maynilad Building, MWSS Complex<br />
-                  Katipunan Avenue, Pansol 1119<br />
-                  Quezon City, Philippines
-                </p>
-              </address>
-            </div>
-
-            <div class="col-md-4 mb-4">
-              <h5 class="fw-bold text-white text-md-dark">Hotline</h5>
-              <p class="mt-2 mb-0 text-md-dark">1626</p>
-            </div>
-          </div>
-
-          <div class="text-center border-top pt-3 pb-2">
-            <small class="text-md-dark"
-              >©2023 Maynilad Water Services, Inc.</small
-            >
-          </div>
+    <!-- Footer Bottom -->
+    <div class="footer-bottom">
+      <div>
+        <h5 class="fw-bold text-md-dark">Socials</h5>
+        <div class="social-icons">
+          <a href="#"><img src="assets/SF.png" alt="Facebook" /></a>
+          <a href="#"><img src="assets/SX.png" alt="Twitter" /></a>
+          <a href="#"><img src="assets/SY.png" alt="YouTube" /></a>
+          <a href="#"><img src="assets/SI.png" alt="Instagram" /></a>
         </div>
       </div>
-    </footer>
 
+      <div>
+        <h5 class="fw-bold text-md-dark">Address</h5>
+        <p class="footer-btn">
+          Maynilad Building, MWSS Complex<br />
+          Katipunan Avenue, Pansol 1119<br />
+          Quezon City, Philippines
+        </p>
+      </div>
+
+      <div>
+        <h5 class="fw-bold text-md-dark">Hotline</h5>
+        <p class="footer-btn">1626</p>
+      </div>
+    </div>
+
+    <div class="divider"></div>
+
+    <!-- Copyright -->
+    <div class="text-center mt-3">
+      <small class="text-md-dark">©2023 Maynilad Water Services, Inc.</small>
+    </div>
+  </div>
+</footer>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const menuToggle = document.querySelector(".mobile-menu-toggle");
