--- a/index.html
+++ b/index.html
@@ -1553,9 +1553,13 @@
     </div>
 
     <!-- SCHEDULES SECTION -->
-    <div class="container" role="list" aria-label="Schedule types">
+    <div
+      class="container d-flex flex-row p-lg-5"
+      role="list"
+      aria-label="Schedule types"
+    >
       <div
-        class="item"
+        class="item border-start"
         role="listitem"
         tabindex="0"
         aria-describedby="desc-rotational"
@@ -1564,7 +1568,7 @@
         <span id="desc-rotational">Apr-01-Dec-31</span>
       </div>
       <div
-        class="item"
+        class="item border-start"
         role="listitem"
         tabindex="0"
         aria-describedby="desc-scheduled"
@@ -1573,7 +1577,7 @@
         <span id="desc-scheduled">Jun-10-Jun-11</span>
       </div>
       <div
-        class="item"
+        class="item border-start"
         role="listitem"
         tabindex="0"
         aria-describedby="desc-emergency"
@@ -1582,7 +1586,7 @@
         <span id="desc-emergency">Jun-09-Jun-10</span>
       </div>
       <div
-        class="item"
+        class="item border-start"
         role="listitem"
         tabindex="0"
         aria-describedby="desc-cleaning"
