--- a/index.html
+++ b/index.html
@@ -1554,12 +1554,12 @@
 
     <!-- SCHEDULES SECTION -->
     <div
-      class="container d-flex flex-row p-lg-5"
+      class="container d-flex flex-md-row flex-wrap p-lg-5"
       role="list"
       aria-label="Schedule types"
     >
       <div
-        class="item border-start"
+        class="item border-start p-3 flex-fill text-center"
         role="listitem"
         tabindex="0"
         aria-describedby="desc-rotational"
@@ -1568,7 +1568,7 @@
         <span id="desc-rotational">Apr-01-Dec-31</span>
       </div>
       <div
-        class="item border-start"
+        class="item border-start p-3 flex-fill text-center"
         role="listitem"
         tabindex="0"
         aria-describedby="desc-scheduled"
@@ -1577,7 +1577,7 @@
         <span id="desc-scheduled">Jun-10-Jun-11</span>
       </div>
       <div
-        class="item border-start"
+        class="item border-start p-3 flex-fill text-center"
         role="listitem"
         tabindex="0"
         aria-describedby="desc-emergency"
@@ -1586,7 +1586,7 @@
         <span id="desc-emergency">Jun-09-Jun-10</span>
       </div>
       <div
-        class="item border-start"
+        class="item border-start p-3 flex-fill text-center"
         role="listitem"
         tabindex="0"
         aria-describedby="desc-cleaning"
