--- a/index.html
+++ b/index.html
@@ -894,7 +894,8 @@
 
         .divider {
           border-top: 1px solid #444;
-          margin: 25px 0;
+          margin: 25px auto;
+          width: 80%;
         }
 
         .footer-bottom {
